# CluFast

./: .gitignore  LICENSE  config.yml  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  start-all.bat
apps/client/: index.html  package.json  tailwind.config.ts  tsconfig.json
apps/client/src/: App.tsx
apps/client/src-tauri/: Cargo.toml  tauri.conf.json
apps/client/src-tauri/capabilities/: default.json
apps/client/src-tauri/src/: main.rs
apps/client/src/components/: AuthScreen.tsx  ChannelSidebar.tsx  ChatArea.tsx  LocalCameraPreview.tsx  MainLayout.tsx  MessageInput.tsx  ScreenShareView.tsx  ServerSidebar.tsx  VoiceParticipants.tsx
apps/client/src/hooks/: use-websocket.ts
apps/client/src/lib/: api.ts  ws-client.ts
apps/client/src/stores/: auth-store.ts  chat-store.ts  data-store.ts  voice-store.ts
apps/server/: package.json  tsconfig.json
apps/server/src/: index.ts
apps/server/src/db/: index.ts  schema.ts
apps/server/src/mediasoup/: config.ts  server.ts  voice-room.ts
apps/server/src/plugins/: auth.ts  cors.ts  db.ts  ws-gateway.ts  ws.ts
apps/server/src/routes/: auth.ts  messages.ts  servers.ts
