[package]
name = "cordfast"
version = "0.0.1"
description = "CordFast - Ultra-optimized Discord clone"
authors = ["you"]
edition = "2021"

[lib]
name = "cordfast_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
